--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema-odonto-database
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://sistema-odonto-server.mysql.database.azure.com:3306/sistema-odonto-database
+spring.datasource.username=fefcsmerhh
+spring.datasource.password=teste@2023
 spring.jpa.hibernate.ddl-auto=update
-
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
